# crashes

./: Analysis of Utah Crash Severity.py  README.md  main.py  pyproject.toml
data/: AADT_Unrounded.dbf:sec.endpointdlp  AADT_Unrounded.shp  AADT_Unrounded.shx  AADT_Unrounded.xml  Utah_Crash_Data_AADT.csv.xml
functions/: utils.py
