[project]
name = "crashes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "marimo[recommended]>=0.18.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
]
